# cbox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  cbox.toml.example
.github/workflows/: ci.yml  release.yml
Formula/: cbox.rb
bins/cbox/: Cargo.toml
bins/cbox/src/: cli.rs  commands.rs  filter.rs  main.rs  util.rs
bins/cbox/src/commands/: destroy.rs  diff.rs  list.rs  merge.rs  run.rs  save.rs
crates/cbox-adapter/: Cargo.toml
crates/cbox-adapter/src/: adapter.rs  claude.rs  error.rs  generic.rs  lib.rs  registry.rs
crates/cbox-container/: Cargo.toml
crates/cbox-container/src/: container.rs  error.rs  lib.rs  runtime.rs
crates/cbox-core/: Cargo.toml
crates/cbox-core/src/: backend.rs  capability.rs  config.rs  error.rs  lib.rs  session.rs  util.rs
crates/cbox-diff/: Cargo.toml
crates/cbox-diff/src/: error.rs  lib.rs  picker.rs  renderer.rs
crates/cbox-network/: Cargo.toml
crates/cbox-network/src/: error.rs  lib.rs  network.rs
crates/cbox-overlay/: Cargo.toml
crates/cbox-overlay/src/: error.rs  lib.rs  overlay.rs
crates/cbox-sandbox/: Cargo.toml
crates/cbox-sandbox/src/: cgroup.rs  cleanup.rs  error.rs  lib.rs  sandbox.rs  seccomp.rs
docs/: index.html
