[package]
name = "cbox-diff"
version.workspace = true
edition.workspace = true

[dependencies]
cbox-core = { workspace = true }
cbox-overlay = { workspace = true }
similar = { workspace = true }
crossterm = { workspace = true }
colored = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
